# FreeRTOS-Colibri-iMX7

./: .gitignore  readme.txt
doc/: readme.txt
examples/imx7_colibri_m4/: FreeRTOSConfig.h  board.c  board.h  clock_freq.c  gpio_pins.c  gpio_pins.h  pin_mux.c  pin_mux.h
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/: gpio_ctrl.c  gpt_timer.c  gpt_timer.h  hardware_init.c  main.c
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/blinking_imx_demo/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world/armgcc/: CMakeLists.txt  build_all.bat  clean.sh
examples/imx7_colibri_m4/demo_apps/hello_world/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_ddr/: hardware_init.c
examples/imx7_colibri_m4/demo_apps/hello_world_ddr/armgcc/: CMakeLists.txt  build_all.sh  build_debug.sh  clean.bat
examples/imx7_colibri_m4/demo_apps/hello_world_ddr/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_ddr/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_ocram/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/hello_world_ocram/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_ocram/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_qspi/armgcc/: CMakeLists.txt  build_all.bat
examples/imx7_colibri_m4/demo_apps/hello_world_qspi/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/hello_world_qspi/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/low_power_imx7d/common/: lpm_mcore.c
examples/imx7_colibri_m4/demo_apps/low_power_imx7d/rand_wfi/: hardware_init.c  main.c
examples/imx7_colibri_m4/demo_apps/rpmsg/gpio_freertos/: gpio_ctrl.c  gpio_ctrl.h  hardware_init.c  main.c
examples/imx7_colibri_m4/demo_apps/rpmsg/gpio_freertos/armgcc/: CMakeLists.txt  clean.sh
examples/imx7_colibri_m4/demo_apps/rpmsg/gpio_freertos/armgcc/debug/: build_debug.sh
examples/imx7_colibri_m4/demo_apps/rpmsg/gpio_freertos/armgcc/release/: build_release.bat
examples/imx7_colibri_m4/demo_apps/rpmsg/pingpong/: pingpong.c
examples/imx7_colibri_m4/demo_apps/rpmsg/str_echo/: str_echo.c
examples/imx7_colibri_m4/demo_apps/sema4_demo/: main.c  sema4_mutex.c
examples/imx7_colibri_m4/demo_apps/sema4_demo/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/sema4_demo/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/sema4_demo/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/sensor_demo/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/demo_apps/sensor_demo/common/: fxas21002.c  fxas21002.h  fxos8700.c  fxos8700.h  i2c_xfer.c  i2c_xfer.h  mma8451q.c  mma8451q.h  mpl3115.c  mpl3115.h
examples/imx7_colibri_m4/demo_apps/sensor_demo/ds5/: readme.txt
examples/imx7_colibri_m4/demo_apps/sensor_demo/iar/: readme.txt
examples/imx7_colibri_m4/demo_apps/sensor_demo/sensor_demo_imx7d/: main.c
examples/imx7_colibri_m4/driver_examples/adc_imx7d/armgcc/: CMakeLists.txt  build_release.bat  clean.bat
examples/imx7_colibri_m4/driver_examples/adc_imx7d/ds5/: readme.txt
examples/imx7_colibri_m4/driver_examples/adc_imx7d/iar/: readme.txt
examples/imx7_colibri_m4/driver_examples/flexcan/flexcan_loopback/: main.c
examples/imx7_colibri_m4/driver_examples/flexcan/flexcan_network/: main.c  readme.md
examples/imx7_colibri_m4/driver_examples/gpio_bank2_imx/: gpio_ctrl.c  hardware_init.c  main.c
examples/imx7_colibri_m4/driver_examples/gpio_bank2_imx/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh  clean.bat
examples/imx7_colibri_m4/driver_examples/gpio_imx/: hardware_init.c  main.c
examples/imx7_colibri_m4/driver_examples/gpio_imx/armgcc/: CMakeLists.txt  build_release.sh
examples/imx7_colibri_m4/driver_examples/gpio_imx/ds5/: readme.txt
examples/imx7_colibri_m4/driver_examples/gpio_imx/iar/: readme.txt
examples/imx7_colibri_m4/driver_examples/gpt/: main.c
examples/imx7_colibri_m4/driver_examples/gpt/armgcc/: CMakeLists.txt
examples/imx7_colibri_m4/driver_examples/gpt/ds5/: readme.txt
examples/imx7_colibri_m4/driver_examples/gpt/iar/: readme.txt
examples/imx7_colibri_m4/driver_examples/uart_imx/uart_interrupt/: main.c
examples/imx7_colibri_m4/driver_examples/uart_imx/uart_polling/: main.c
examples/imx7_colibri_m4/driver_examples/wdog_imx/: main.c
examples/imx7_colibri_m4/driver_examples/wdog_imx/armgcc/: CMakeLists.txt  build_debug.bat
examples/imx7_colibri_m4/driver_examples/wdog_imx/ds5/: readme.txt
examples/imx7_colibri_m4/driver_examples/wdog_imx/iar/: readme.txt
examples/imx7_colibri_m4/low_power_demo/: FreeRTOSConfig.h  hardware_init.c  lpm_mcore.c  lpm_mcore.h  main.c
examples/imx7_colibri_m4/low_power_demo/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
examples/imx7_colibri_m4/low_power_demo/ugui/: ugui.h
middleware/multicore/open-amp/docs/: readme.txt
middleware/multicore/open-amp/rpmsg/: remote_device.c  rpmsg.c  rpmsg.h  rpmsg_core.c  rpmsg_core.h  rpmsg_ext.c
middleware/multicore/open-amp/virtio/: virtio_ring.h  virtqueue.c  virtqueue.h
platform/devices/: device_imx.h
platform/devices/MCIMX7D/startup/: system_MCIMX7D_M4.c
platform/drivers/inc/: adc_imx7d.h  ccm_analog_imx7d.h  ccm_imx7d.h  ecspi.h  flexcan.h  gpio_imx.h  gpt.h  i2c_imx.h  mu_imx.h  rdc.h  rdc_defs_imx7d.h  rdc_semaphore.h  sema4.h  uart_imx.h  wdog_imx.h
platform/drivers/src/: adc_imx7d.c  ccm_analog_imx7d.c  ccm_imx7d.c  ecspi.c  flexcan.c  gpio_imx.c  gpt.c  i2c_imx.c  uart_imx.c
platform/utilities/inc/: debug_console_imx.h
platform/utilities/src/: debug_console_imx.c
tools/cmake_toolchain_files/: armgcc.cmake
tools/trace32/: readme.txt
tools/vscode/py_cmake2vscode/: cmakelists_parser.py  create_c_cpp_properties.py  create_launch.py  create_tasks.py  create_workspace.py  launch_template.json  main.py  tasks_template.json  workspace_template.code-workspace
(+102 files in other folders)
